--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,9 @@ canvas{
     width: 100%;
     height: 100%;
 }
-
+[v-cloak] {
+	display: none;
+}
 .app-canvas {
 	overflow: hidden;
     background-color:#ddd;
